personalização do design

--- a/page-item.html
+++ b/page-item.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="./css/futuro.css" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
     <title>Qual o futuro das profissões na Nova Economia?</title>
   </head>
 
@@ -16,7 +16,7 @@
           <button>Voltar</button>
         </a>
       </div>
-      <img src="../images/futuro.webp" alt="banner" />
+      <img src="./images/photo-2.avif" alt="banner" />
       <p class="publication">Publicado em: 9 jun 2022 - 11:00</p>
       <h1>Qual o futuro das profissões na Nova Economia?</h1>
       <h4>
