estilização da logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 <body>
   <header>
     <div class="container">
-      <img src="./assets/image.png" alt="logo" />
+      <div class="logo">
+        <img class="logo-image" src="./assets/logo.svg" alt="logo" />
+        <span class="logo-name">Tutorial</span>
+      </div>
       <div class="menu-section">
         <div class="container-menu">
           <input type="checkbox" id="checkbox-menu" />
