conteúdos listados nos cards com links

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tutorial Dev</title>
-  <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="public/logo.svg" />
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="./css/responsive.css" />
+  <title>Tutorial Dev</title>
 </head>
 
 <body>
@@ -63,7 +63,7 @@
   </main>
 
   <section id="artigos" class="cards">
-    <a href="https://www.startse.com/artigos/ferramentas-digitais-sao-chave-na-gestao-financeira-das-startups/">
+    <a href="https://web.dev/" target="_blank" rel="noopener noreferrer">
       <div class="card">
         <div class="image">
           <img src="./images/photo-1.avif" />
@@ -80,7 +80,7 @@
         </div>
       </div>
     </a>
-    <a href="./page-item.html">
+    <a href="https://css-tricks.com/guides/" target="_blank" rel="noopener noreferrer">
       <div class="card">
         <div class="image">
           <img src="./images/photo-2.avif" />
@@ -96,118 +96,182 @@
         </div>
       </div>
     </a>
-    <div class="card">
-      <div class="image">
-        <img src="./images/photo-3.avif" />
-      </div>
+    <a href="https://open-props.style/" target="_blank" rel="noopener noreferrer">
+      <div class="card">
+        <div class="image">
+          <img src="./images/photo-3.avif" />
+        </div>
 
-      <div class="content">
-        <p class="title text--medium">
-          Com startups mais 'baratas', grandes empresas buscam aquisições
-        </p>
-        <div class="info">
-          <p class="text--medium">57 Min</p>
+        <div class="content">
+          <p class="title text--medium">
+            Com startups mais 'baratas', grandes empresas buscam aquisições
+          </p>
+          <div class="info">
+            <p class="text--medium">57 Min</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="card">
-      <div class="image">
-        <img src="./images/photo-4.avif" />
-      </div>
+    </a>
+    <a href="https://glitch.com/edit/#!/sleet-crimson-smell" target="_blank" rel="noopener noreferrer">
+      <div class="card">
+        <div class="image">
+          <img src="./images/photo-4.avif" />
+        </div>
 
-      <div class="content">
-        <p class="title text--medium">
-          Com startups mais 'baratas', grandes empresas buscam aquisições
-        </p>
-        <div class="info">
-          <p class="text--medium">57 Min</p>
+        <div class="content">
+          <p class="title text--medium">
+            Com startups mais 'baratas', grandes empresas buscam aquisições
+          </p>
+          <div class="info">
+            <p class="text--medium">57 Min</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="card">
-      <div class="image">
-        <img src="./images/photo-5.avif" />
-      </div>
+    </a>
+    <a href="https://uidesigndaily.com/" target="_blank" rel="noopener noreferrer">
+      <div class="card">
+        <div class="image">
+          <img src="./images/photo-5.avif" />
+        </div>
 
-      <div class="content">
-        <p class="title text--medium">
-          Com startups mais 'baratas', grandes empresas buscam aquisições
-        </p>
-        <div class="info">
-          <p class="text--medium">57 Min</p>
+        <div class="content">
+          <p class="title text--medium">
+            Com startups mais 'baratas', grandes empresas buscam aquisições
+          </p>
+          <div class="info">
+            <p class="text--medium">57 Min</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="card">
-      <div class="image">
-        <img src="./images/photo-6.avif" />
-      </div>
+    </a>
+    <a href="https://reactfordesigners.com/" target="_blank" rel="noopener noreferrer">
+      <div class="card">
+        <div class="image">
+          <img src="./images/photo-6.avif" />
+        </div>
 
-      <div class="content">
-        <p class="title text--medium">
-          Com startups mais 'baratas', grandes empresas buscam aquisições
-        </p>
-        <div class="info">
-          <p class="text--medium">57 Min</p>
+        <div class="content">
+          <p class="title text--medium">
+            Com startups mais 'baratas', grandes empresas buscam aquisições
+          </p>
+          <div class="info">
+            <p class="text--medium">57 Min</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="card">
-      <div class="image">
-        <img src="./images/photo-7.avif" />
-      </div>
+    </a>
+    <a href="https://devresourc.es/" target="_blank" rel="noopener noreferrer">
+      <div class="card">
+        <div class="image">
+          <img src="./images/photo-7.avif" />
+        </div>
 
-      <div class="content">
-        <p class="title text--medium">
-          Com startups mais 'baratas', grandes empresas buscam aquisições
-        </p>
-        <div class="info">
-          <p class="text--medium">57 Min</p>
+        <div class="content">
+          <p class="title text--medium">
+            Com startups mais 'baratas', grandes empresas buscam aquisições
+          </p>
+          <div class="info">
+            <p class="text--medium">57 Min</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="card">
-      <div class="image">
-        <img src="./images/photo-8.avif" />
-      </div>
+    </a>
+    <a href="https://headlessui.dev/" target="_blank" rel="noopener noreferrer">
+      <div class="card">
+        <div class="image">
+          <img src="./images/photo-8.avif" />
+        </div>
 
-      <div class="content">
-        <p class="title text--medium">
-          Com startups mais 'baratas', grandes empresas buscam aquisições
-        </p>
-        <div class="info">
-          <p class="text--medium">57 Min</p>
+        <div class="content">
+          <p class="title text--medium">
+            Com startups mais 'baratas', grandes empresas buscam aquisições
+          </p>
+          <div class="info">
+            <p class="text--medium">57 Min</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="card">
-      <div class="image">
-        <img src="./images/photo-9.avif" />
-      </div>
+    </a>
+    <a href="https://gridbyexample.com/patterns/" target="_blank" rel="noopener noreferrer">
+      <div class="card">
+        <div class="image">
+          <img src="./images/photo-9.avif" />
+        </div>
 
-      <div class="content">
-        <p class="title text--medium">
-          Com startups mais 'baratas', grandes empresas buscam aquisições
-        </p>
-        <div class="info">
-          <p class="text--medium">57 Min</p>
+        <div class="content">
+          <p class="title text--medium">
+            Com startups mais 'baratas', grandes empresas buscam aquisições
+          </p>
+          <div class="info">
+            <p class="text--medium">57 Min</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="card">
-      <div class="image">
-        <img src="./images/photo-10.avif" />
-      </div>
+    </a>
+    <a href="http://highscalability.com/" target="_blank" rel="noopener noreferrer">
+      <div class="card">
+        <div class="image">
+          <img src="./images/photo-10.avif" />
+        </div>
 
-      <div class="content">
-        <p class="title text--medium">
-          Com startups mais 'baratas', grandes empresas buscam aquisições
-        </p>
-        <div class="info">
-          <p class="text--medium">57 Min</p>
+        <div class="content">
+          <p class="title text--medium">
+            Com startups mais 'baratas', grandes empresas buscam aquisições
+          </p>
+          <div class="info">
+            <p class="text--medium">57 Min</p>
+          </div>
         </div>
       </div>
-    </div>
+    </a>
+    <a href="https://flexbox.malven.co/" target="_blank" rel="noopener noreferrer">
+      <div class="card">
+        <div class="image">
+          <img src="./images/photo-11.avif" />
+        </div>
+
+        <div class="content">
+          <p class="title text--medium">
+            Com startups mais 'baratas', grandes empresas buscam aquisições
+          </p>
+          <div class="info">
+            <p class="text--medium">57 Min</p>
+          </div>
+        </div>
+      </div>
+    </a>
+    <a href="https://grid.malven.co/" target="_blank" rel="noopener noreferrer">
+      <div class="card">
+        <div class="image">
+          <img src="./images/photo-12.avif" />
+        </div>
+
+        <div class="content">
+          <p class="title text--medium">
+            Com startups mais 'baratas', grandes empresas buscam aquisições
+          </p>
+          <div class="info">
+            <p class="text--medium">57 Min</p>
+          </div>
+        </div>
+      </div>
+    </a>
+    <a href="https://codepip.com/games/" target="_blank" rel="noopener noreferrer">
+      <div class="card">
+        <div class="image">
+          <img src="./images/photo-13.avif" />
+        </div>
+
+        <div class="content">
+          <p class="title text--medium">
+            Com startups mais 'baratas', grandes empresas buscam aquisições
+          </p>
+          <div class="info">
+            <p class="text--medium">57 Min</p>
+          </div>
+        </div>
+      </div>
+    </a>
   </section>
 
 </body>
